fixed project image alignment, added href to <a> tags

--- a/style.css
+++ b/style.css
@@ -104,16 +104,19 @@ html {
     margin-right: 4%;
     margin-top: 1%;
     margin-bottom: 1%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 .project_picture {
     height: 100%;
-    display: inline-block;
+    max-width: 55%;
 }
 
 .project_picture img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: fill;
 }
 
